[package]
name = "d1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d1p1"
path = "src/d1/part1.rs"

[[bin]]
name = "d1p2"
path = "src/d1/part2.rs"

[[bin]]
name = "d2p1"
path = "src/d2/part1.rs"

[[bin]]
name = "d2p2"
path = "src/d2/part2.rs"

[[bin]]
name = "d3p1"
path = "src/d3/part1.rs"

[[bin]]
name = "d3p2"
path = "src/d3/part2.rs"

[[bin]]
name = "d4p1"
path = "src/d4/part1.rs"

[[bin]]
name = "d4p2"
path = "src/d4/part2.rs"

[[bin]]
name = "d5p1"
path = "src/d5/part1.rs"

[[bin]]
name = "d5p2"
path = "src/d5/part2.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
